--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
   "Главная": "Main",
   "О нас": "About us",
   "Открыть": "Open",
-  "Скрыть": "Close"
+  "Скрыть": "Close",
+  "Страница не найдена": "Page not found"
 }
