--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,6 @@
 {
   "Переведено через интернационализацию":" Переведено через интернационализацию",
   "Перевести":"Перевести",
-  "Язык":"Русский"
+  "Язык":"Русский",
+  "Страница не найдена": "Страница не найдена"
 }
