error page and button for testing error page done

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,7 @@
   "Переведено через интернационализацию":" Переведено через интернационализацию",
   "Перевести":"Перевести",
   "Язык":"Русский",
-  "Страница не найдена": "Страница не найдена"
+  "Страница не найдена": "Страница не найдена",
+  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Обновить страницу": "Обновить страницу"
 }
