--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,8 @@
   "О нас": "About us",
   "Открыть": "Open",
   "Скрыть": "Close",
-  "Страница не найдена": "Page not found"
+  "Страница не найдена": "Page not found",
+  "Произошла непредвиденная ошибка": "Something wrong happens",
+  "Обновить страницу": "Reload Page"
+  
 }
