actions script and navBar rearanged

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,6 +7,6 @@
   "Скрыть": "Close",
   "Страница не найдена": "Page not found",
   "Произошла непредвиденная ошибка": "Something wrong happens",
-  "Обновить страницу": "Reload Page"
-  
+  "Обновить страницу": "Reload Page",
+  "Короткий язык": "en"
 }
