--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,5 +8,6 @@
   "Страница не найдена": "Page not found",
   "Произошла непредвиденная ошибка": "Something wrong happens",
   "Обновить страницу": "Reload Page",
-  "Короткий язык": "en"
+  "Короткий язык": "en",
+  "Войти": "Login"
 }
